k8s/client-staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: client
  name: client
spec:
  type: NodePort
  ports:
    - name: "client-port"
      port: 3080
      targetPort: 80
  selector:
    deployment.name: client
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: client
  template:
    metadata:
      labels:
        deployment.name: client
    spec:
      containers:
      - name: client-staging
        image: gitlab.lnu.se:5050/2dv013/student/team-6-sphynx/litter/client-staging:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
