k8s/client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
spec:
  type: ClusterIP
  ports:
    - name: "client-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: gitlab.lnu.se:5050/2dv013/student/team-6-sphynx/litter/client:latest
        ports:
        - containerPort: 8080
