k8s/lit-write.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: lit-write
  name: lit-write
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "lit-write-port"
      port: 8896
      targetPort: 8080
  selector:
    deployment.name: lit-write
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lit-write
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: lit-write
  template:
    metadata:
      labels:
        deployment.name: lit-write
    spec:
      containers:
      - name: lit-write
        image: gitlab.lnu.se:5050/2dv013/student/team-6-sphynx/litter/lit-write:latest
        ports:
          - containerPort: 8080
        imagePullSecrets:
          - name: regcred # Secret set as a secret in the cluster
