k8s/profile.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: profile
  name: profile
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "profile-port"
      port: 8889
      targetPort: 8080
  selector:
    deployment.name: profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: profile
  template:
    metadata:
      labels:
        deployment.name: profile
    spec:
      containers:
      - name: profile
        image: gitlab.lnu.se:5050/2dv013/student/team-6-sphynx/litter/profile:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
