k8s/user-write.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: user-write
  name: user-write
spec:
  type: NodePort # Using this to connect loadBalancer to in CSCloud
  ports:
    - name: "user-write-port"
      port: 8894
      targetPort: 8080
  selector:
    deployment.name: user-write
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-write
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: user-write
  template:
    metadata:
      labels:
        deployment.name: user-write
    spec:
      containers:
      - name: user-write
        image: gitlab.lnu.se:5050/2dv013/student/team-6-sphynx/litter/user-write:latest
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred # Secret set as a secret in the cluster
