k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /api/litsread
            pathType: Prefix
            backend:
              service:
                name: lit-read
                port:
                  number: 8080
          - path: /api/litswrite
            pathType: Prefix
            backend:
              service:
                name: lit-write
                port:
                  number: 8080
          - path: /api/usersread
            pathType: Prefix
            backend:
              service:
                name: user-read
                port:
                  number: 8080
          - path: /api/userswrite
            pathType: Prefix
            backend:
              service:
                name: user-write
                port:
                  number: 8080
