k8s/nginx-ingress-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cscloud7-248.lnu.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /error-500
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3080
